--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -540,6 +540,62 @@
 "_comment": " [CATEGORY]: DUNGEON - NAMES",
 
 
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
+	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
+	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
+	"mmorpg.currency.chaos_orb": "Orb of Chaos",
+	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
+	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
+	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
+	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
+	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"item.mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
+	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
+	"mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
+	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
+	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+	"mmorpg.currency.socket_adder": "Orb of Digging",
+	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
 
 	"mmorpg.ailment.bleed": "Bleed",
@@ -556,6 +612,7 @@
 	"mmorpg.effect.essence_of_frost": "Essence of Frost",
 	"mmorpg.effect.frost_lich": "Frost Lich",
 	"mmorpg.effect.ground": "Grounding",
+	"mmorpg.effect.ice_golem_buff": "Ice Golem Buff",
 	"mmorpg.effect.inner_calm": "Inner Calm",
 	"mmorpg.effect.mage_circle": "Mage Circle",
 	"mmorpg.effect.missile_barrage": "Missile Barrage",
@@ -575,62 +632,6 @@
 	"mmorpg.effect.wounds": "Wounds",
 
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
-
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
-	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
-	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"mmorpg.currency.chaos_orb": "Orb of Chaos",
-	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
-	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
-	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
-	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
-	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
-	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
-	"item.mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
-	"mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
-	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
-	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
-	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: TALENTS - NAMES",
@@ -876,6 +877,7 @@
 	"mmorpg.stat.all_resist": "None Resistance",
 	"mmorpg.stat.all_vuln_crit": "\u00A77None Damage always crits you.",
 	"mmorpg.stat.all_water_damage": "Cold Damage",
+	"mmorpg.stat.apply_golem_effect_ice_golem_buff": "\u00A77Golem Attacks give you Ice Golem Buff",
 	"mmorpg.stat.archmage": "\u00A77Add \u00A7a[VAL1]\u00A77% of your \u00A79\u262F Mana\u00A77 to Spell Damage",
 	"mmorpg.stat.archmage_mana_cost": "\u00A77Add \u00A7a[VAL1]\u00A77% of your \u00A79\u262F Mana\u00A77 to the Mana Cost",
 	"mmorpg.stat.area_cast_time": "Area Cast Time",
@@ -909,6 +911,7 @@
 	"mmorpg.stat.block_chance": "Block Chance",
 	"mmorpg.stat.blood": "Blood",
 	"mmorpg.stat.blood_leech_cap": "Blood Leech Cap",
+	"mmorpg.stat.blood_on_": "\u00A77Gain Blood on Dodge",
 	"mmorpg.stat.blood_per_10_strength": "\u00A7a[VAL1] \u00A74\u2764 Blood\u00A77 per 10 \u00A7b\u2605 Strength\u00A77",
 	"mmorpg.stat.blood_user": "\u00A77You now use \u00A74\u2764 Blood\u00A77 instead of \u00A79\u262F Mana\u00A77",
 	"mmorpg.stat.bonus_exp": "Bonus Experience",
@@ -934,7 +937,6 @@
 	"mmorpg.stat.chaining_cdr": "Chaining Spell Cooldown Reduction",
 	"mmorpg.stat.chaining_spell_dmg": "Chaining Damage",
 	"mmorpg.stat.chaining_spell_dmg_taken": "Chaining Damage Taken",
-	"mmorpg.stat.chance_of_barrage_on_spell_crit": "\u00A77Your non Missile Spell Criticals have \u00A7a[VAL1]\u00A77% chance of giving you Missile Barrage",
 	"mmorpg.stat.chance_of_blind": "\u00A77Your \u00A75\u2600 Chaos\u00A77 Attacks have \u00A7a[VAL1]\u00A77% chance of applying Blind",
 	"mmorpg.stat.chance_of_slow": "\u00A77Your \u00A76\u2600 Physical\u00A77 Attacks have \u00A7a[VAL1]\u00A77% chance of applying Slow",
 	"mmorpg.stat.chaos_ailment_aura_cost": "\u00A77Decree of Chaos Cost",
@@ -1037,6 +1039,7 @@
 	"mmorpg.stat.enchanting_triple_drop": "Triple Drop Chance",
 	"mmorpg.stat.energy": "Energy",
 	"mmorpg.stat.energy_leech_cap": "Energy Leech Cap",
+	"mmorpg.stat.energy_on_": "\u00A77Gain Energy on Block",
 	"mmorpg.stat.energy_on_hit_hit": "Energy on Hit",
 	"mmorpg.stat.energy_per_10_dexterity": "\u00A7a[VAL1] \u00A7a\u262F Energy\u00A77 per 10 \u00A7b\u2605 Dexterity\u00A77",
 	"mmorpg.stat.energy_per_10_mana": "\u00A7a[VAL1] \u00A7a\u262F Energy\u00A77 per 10 \u00A79\u262F Mana\u00A77",
@@ -1095,6 +1098,7 @@
 	"mmorpg.stat.golem_cast_time": "Golem Cast Time",
 	"mmorpg.stat.golem_cdr": "Golem Spell Cooldown Reduction",
 	"mmorpg.stat.golem_damage": "Golem Damage",
+	"mmorpg.stat.golem_eff_dur_u_cast": "Golem Effect Duration",
 	"mmorpg.stat.golem_spell_chance": "Golem Spell Chance",
 	"mmorpg.stat.golem_spell_dmg": "Golem Damage",
 	"mmorpg.stat.golem_spell_dmg_taken": "Golem Damage Taken",
@@ -1111,6 +1115,7 @@
 	"mmorpg.stat.heal_spell_dmg_taken": "Heal Damage Taken",
 	"mmorpg.stat.health": "Health",
 	"mmorpg.stat.health_leech_cap": "Health Leech Cap",
+	"mmorpg.stat.health_on_": "\u00A77Gain Health on Block",
 	"mmorpg.stat.health_on_hit_hit": "Health on Hit",
 	"mmorpg.stat.health_on_kill": "Health on Kill",
 	"mmorpg.stat.health_per_10_dexterity": "\u00A7a[VAL1] \u00A7c\u2764 Health\u00A77 per 10 \u00A7b\u2605 Dexterity\u00A77",
@@ -1143,6 +1148,8 @@
 	"mmorpg.stat.inc_effect_of_defensive_buff_on_you": "[VAL1]% to effectiveness of Defensive buffs on you",
 	"mmorpg.stat.inc_effect_of_food_buff_given": "Food Effect Strength",
 	"mmorpg.stat.inc_effect_of_food_buff_on_you": "[VAL1]% to effectiveness of Food buffs on you",
+	"mmorpg.stat.inc_effect_of_golem_buff_given": "Golem Effect Strength",
+	"mmorpg.stat.inc_effect_of_golem_buff_on_you": "[VAL1]% to effectiveness of Golem buffs on you",
 	"mmorpg.stat.inc_effect_of_heal_over_time_buff_given": "Heal over time Effect Strength",
 	"mmorpg.stat.inc_effect_of_heal_over_time_buff_on_you": "[VAL1]% to effectiveness of Heal over time buffs on you",
 	"mmorpg.stat.inc_effect_of_immobilizing_buff_given": "Immobilizing Effect Strength",
@@ -1277,6 +1284,7 @@
 	"mmorpg.stat.magic_shield_aura_cost": "\u00A77Magic Shield Cost",
 	"mmorpg.stat.magic_shield_heal": "Magic Shield Healing",
 	"mmorpg.stat.magic_shield_leech_cap": "Magic Shield Leech Cap",
+	"mmorpg.stat.magic_shield_on_": "\u00A77Gain Magic Shield on Dodge",
 	"mmorpg.stat.magic_shield_on_hit_hit": "Magic Shield on Hit",
 	"mmorpg.stat.magic_shield_on_kill": "Magic Shield on Kill",
 	"mmorpg.stat.magic_shield_per_10_mana": "\u00A7a[VAL1] \u00A7d\u2764 Magic Shield\u00A77 per 10 \u00A79\u262F Mana\u00A77",
@@ -1288,6 +1296,7 @@
 	"mmorpg.stat.mana": "Mana",
 	"mmorpg.stat.mana_cost": "Mana Cost",
 	"mmorpg.stat.mana_leech_cap": "Mana Leech Cap",
+	"mmorpg.stat.mana_on_": "\u00A77Gain Mana on Block",
 	"mmorpg.stat.mana_on_hit_hit": "Mana on Hit",
 	"mmorpg.stat.mana_on_kill": "Mana on Kill",
 	"mmorpg.stat.mana_per_10_dexterity": "\u00A7a[VAL1] \u00A79\u262F Mana\u00A77 per 10 \u00A7b\u2605 Dexterity\u00A77",
@@ -2102,6 +2111,7 @@
 	"mmorpg.tag.effect.curse": "Curse",
 	"mmorpg.tag.effect.defensive": "Defensive",
 	"mmorpg.tag.effect.food": "Food",
+	"mmorpg.tag.effect.golem": "Golem",
 	"mmorpg.tag.effect.heal_over_time": "Heal over time",
 	"mmorpg.tag.effect.immobilizing": "Immobilizing",
 	"mmorpg.tag.effect.negative": "Negative",
@@ -2272,7 +2282,7 @@
 	"mmorpg.word.allowedon": "Allowed On: ",
 	"mmorpg.word.areacontains": "Area Contains an Uber Boss Portal",
 	"mmorpg.word.armor": "On Armor: ",
-	"mmorpg.word.ascclasses": "Classes",
+	"mmorpg.word.ascclasses": "Ascendancy",
 	"mmorpg.word.aura": "Augment",
 	"mmorpg.word.automatic_pve": "Auto PVE\n\nPlayers who enable this are considered Teamed up and Allies\n- Must be in Nearby (Radius set by config)",
 	"mmorpg.word.avg_lvl": "Average LVL: %1$s",
@@ -2292,6 +2302,7 @@
 	"mmorpg.word.characters": "Characters",
 	"mmorpg.word.charge_regen": "Charge Regen: %1$ss",
 	"mmorpg.word.claim": "Claim",
+	"mmorpg.word.classes": "Classes",
 	"mmorpg.word.clicktoopen": "Click to Open",
 	"mmorpg.word.configs": "Configs",
 	"mmorpg.word.cooldown": "Cooldown: %1$ss",
@@ -2528,7 +2539,6 @@
 	"mmorpg.stat_desc.chaining_cast_time": "Reduces cast time of spells with this tag",
 	"mmorpg.stat_desc.chaining_cdr": "Reduces spell cooldown of spells with the tag.",
 	"mmorpg.stat_desc.chaining_spell_dmg": "Increases damage of spells with this tag. Totem Damage increases dmg of totems, etc.",
-	"mmorpg.stat_desc.chance_of_barrage_on_spell_crit": "Chance to give effect",
 	"mmorpg.stat_desc.chance_of_blind": "Chance to give effect",
 	"mmorpg.stat_desc.chance_of_slow": "Chance to give effect",
 	"mmorpg.stat_desc.chaos_cast_time": "Reduces cast time of spells with this tag",
@@ -2669,6 +2679,8 @@
 	"mmorpg.stat_desc.inc_effect_of_defensive_buff_on_you": "Increases the stat strength of effects you receive",
 	"mmorpg.stat_desc.inc_effect_of_food_buff_given": "Increases the stat strength of effects you give",
 	"mmorpg.stat_desc.inc_effect_of_food_buff_on_you": "Increases the stat strength of effects you receive",
+	"mmorpg.stat_desc.inc_effect_of_golem_buff_given": "Increases the stat strength of effects you give",
+	"mmorpg.stat_desc.inc_effect_of_golem_buff_on_you": "Increases the stat strength of effects you receive",
 	"mmorpg.stat_desc.inc_effect_of_heal_over_time_buff_given": "Increases the stat strength of effects you give",
 	"mmorpg.stat_desc.inc_effect_of_heal_over_time_buff_on_you": "Increases the stat strength of effects you receive",
 	"mmorpg.stat_desc.inc_effect_of_immobilizing_buff_given": "Increases the stat strength of effects you give",
