--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -593,8 +593,8 @@
 	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
 	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
 	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
-	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
 	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
+	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
 	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
@@ -605,14 +605,14 @@
 	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
-	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
 	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
 	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
@@ -629,10 +629,10 @@
 	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"mmorpg.currency.socket_adder": "Orb of Digging",
+	"item.mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
 	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
 
@@ -1701,10 +1701,12 @@
 
 	"mmorpg.stat_layer.additive_damage": "Additive Damage",
 	"mmorpg.stat_layer.crit_damage": "Crit Damage",
+	"mmorpg.stat_layer.damage_conversion": "Damage Conversion",
 	"mmorpg.stat_layer.damage_reduction": "Damage Reduction",
 	"mmorpg.stat_layer.double_damage": "Double Damage",
 	"mmorpg.stat_layer.elemental_mitigation": "Elemental Mitigation",
 	"mmorpg.stat_layer.flat_damage": "Flat Damage",
+	"mmorpg.stat_layer.flat_damage_reduction": "Flat Damage Reduction",
 	"mmorpg.stat_layer.physical_mitigation": "Physical Mitigation",
 
 "_comment": " [CATEGORY]: STAT LAYER - NAMES",
@@ -1815,6 +1817,138 @@
 	"mmorpg.chat.you_lack_jewel_slots": "You lack jewel slots! You gain these typically from the Talent tree. You can use the search bar in the Talents screen to find them.",
 
 "_comment": " [CATEGORY]: CHAT MESSAGES - NAMES",
+
+
+"_comment": " [CATEGORY]: AFFIXES - NAMES",
+
+	"mmorpg.affix.amber_amulet": "Amber Amulet",
+	"mmorpg.affix.arcane_staff": "Arcane Staff",
+	"mmorpg.affix.archeologists": "Archeologist's",
+	"mmorpg.affix.armor_eye": "Unused",
+	"mmorpg.affix.ass_bow": "Assassin Bow",
+	"mmorpg.affix.ass_crossbow": "Assassin Crossbow",
+	"mmorpg.affix.azure": "Azure",
+	"mmorpg.affix.bandit_mask": "Bandit Mask",
+	"mmorpg.affix.bone_bow": "Bone Bow",
+	"mmorpg.affix.bone_crossbow": "Bone Crossbow",
+	"mmorpg.affix.bone_helm": "Bone Circlet",
+	"mmorpg.affix.boundless": "Boundless",
+	"mmorpg.affix.chaos_damage_eye": "Unused",
+	"mmorpg.affix.chaos_ele_dmg_jewelry": "Of Venom",
+	"mmorpg.affix.chaos_res": "Of the Snake",
+	"mmorpg.affix.chaos_res_eye": "Unused",
+	"mmorpg.affix.chaos_wep_dmg": "Poisoned",
+	"mmorpg.affix.cleric_staff": "Cleric Staff",
+	"mmorpg.affix.cold_damage_eye": "Unused",
+	"mmorpg.affix.cold_res_eye": "Unused",
+	"mmorpg.affix.crit_prefix": "Critical",
+	"mmorpg.affix.cursed_staff": "Cursed Staff",
+	"mmorpg.affix.desolation": "Desolation",
+	"mmorpg.affix.dodge_eye": "Unused",
+	"mmorpg.affix.dusk_blade": "Dusk Blade",
+	"mmorpg.affix.ene_ring": "Emerald Ring",
+	"mmorpg.affix.energetic": "Energetic",
+	"mmorpg.affix.energy_reg": "Invirogating",
+	"mmorpg.affix.energy_reg_eye": "Unused",
+	"mmorpg.affix.fire_damage_eye": "Unused",
+	"mmorpg.affix.fire_ele_dmg_jewelry": "Of Embers",
+	"mmorpg.affix.fire_res": "Of the Drake",
+	"mmorpg.affix.fire_res_eye": "Unused",
+	"mmorpg.affix.fire_spell_ele_dmg": "Scorched",
+	"mmorpg.affix.fire_wep_dmg": "Scorched",
+	"mmorpg.affix.focused": "Focused",
+	"mmorpg.affix.glacial_staff": "Glacial Staff",
+	"mmorpg.affix.gladiator_helm": "Gladiator Helm",
+	"mmorpg.affix.glimmering": "Glimmering",
+	"mmorpg.affix.golden_crown": "Golden Crown",
+	"mmorpg.affix.heal_crit_dmg_prefix": "Inspiring",
+	"mmorpg.affix.heal_crit_prefix": "Truthful",
+	"mmorpg.affix.heal_suff": "Of Restoration",
+	"mmorpg.affix.health_reg_eye": "Unused",
+	"mmorpg.affix.hp_ring": "Coral Ring",
+	"mmorpg.affix.hunter_hood": "Hunter Hood",
+	"mmorpg.affix.immortal": "Immortal",
+	"mmorpg.affix.imperial_bow": "Imperial Bow",
+	"mmorpg.affix.imperial_crossbow": "Imperial Crossbow",
+	"mmorpg.affix.item_both_armor": "Reinforced",
+	"mmorpg.affix.item_both_dodge": "Scaled",
+	"mmorpg.affix.item_both_ms": "Fortified",
+	"mmorpg.affix.item_flat_armor": "Reinforced",
+	"mmorpg.affix.item_flat_dodge": "Scaled",
+	"mmorpg.affix.item_flat_ms": "Fortified",
+	"mmorpg.affix.item_perc_armor": "Reinforced",
+	"mmorpg.affix.item_perc_dodge": "Scaled",
+	"mmorpg.affix.item_perc_ms": "Fortified",
+	"mmorpg.affix.jade_amulet": "Jade Amulet",
+	"mmorpg.affix.lapis_amulet": "Lapis Amulet",
+	"mmorpg.affix.light_res_eye": "Unused",
+	"mmorpg.affix.lightning_damage_eye": "Unused",
+	"mmorpg.affix.lightning_res": "Of the Yeti",
+	"mmorpg.affix.lightning_spell_ele_dmg": "Poisoned",
+	"mmorpg.affix.lightning_staff": "Lightning Staff",
+	"mmorpg.affix.lunaris_circlet": "Lunaris Circlet",
+	"mmorpg.affix.magic_shield_eye": "Unused",
+	"mmorpg.affix.magic_shield_reg_eye": "Unused",
+	"mmorpg.affix.mana_reg": "Soothing",
+	"mmorpg.affix.mana_reg_eye": "Unused",
+	"mmorpg.affix.mana_ring": "Paua Ring",
+	"mmorpg.affix.mana_thief": "Mana Thief's",
+	"mmorpg.affix.mind_cage": "Mind Cage",
+	"mmorpg.affix.ms_reg": "Stabilizing",
+	"mmorpg.affix.ms_ring": "Moonstone Ring",
+	"mmorpg.affix.necro_helmet": "Necromancer Helm",
+	"mmorpg.affix.oakwood_staff": "Oak Wood Staff",
+	"mmorpg.affix.of_affluence": "Of Affluence",
+	"mmorpg.affix.of_azure_skies": "Of Azure Skies",
+	"mmorpg.affix.of_brutality": "Of Brutality",
+	"mmorpg.affix.of_consumption": "Of Consumption",
+	"mmorpg.affix.of_devastation": "Of Devastation",
+	"mmorpg.affix.of_energy": "Of Energy",
+	"mmorpg.affix.of_fast_cast": "Of Faster Casting",
+	"mmorpg.affix.of_gluttony": "Of Gluttony",
+	"mmorpg.affix.of_less_cd": "Of Repetition",
+	"mmorpg.affix.of_mana": "Of Mana",
+	"mmorpg.affix.of_pene": "Of Penetration",
+	"mmorpg.affix.of_spell_dmg": "Of Spell Damage",
+	"mmorpg.affix.of_spirit_markings": "Of Spirit Markings",
+	"mmorpg.affix.of_the_philosopher": "Of the Philosopher",
+	"mmorpg.affix.of_the_sky": "Of the Sky",
+	"mmorpg.affix.of_the_titan": "Of the Titan",
+	"mmorpg.affix.of_the_troll": "Of The Troll",
+	"mmorpg.affix.of_the_wind": "Of the Wind",
+	"mmorpg.affix.of_treasure": "Of Treasure",
+	"mmorpg.affix.of_vampirism": "Of Vampirism",
+	"mmorpg.affix.physical_damage_eye": "Unused",
+	"mmorpg.affix.physical_wep_dmg": "Tyrannical",
+	"mmorpg.affix.precise": "Precise",
+	"mmorpg.affix.promised": "Promised",
+	"mmorpg.affix.royal_helm": "Royal Helm",
+	"mmorpg.affix.rusted_sword": "Rusted Sword",
+	"mmorpg.affix.scavanger": "Scavanger",
+	"mmorpg.affix.seraphim": "Seraphim's",
+	"mmorpg.affix.siege_helm": "Siege Helmet",
+	"mmorpg.affix.strong_dex_armor_suf": "Of Skill",
+	"mmorpg.affix.strong_int_armor_suf": "Of the Genius",
+	"mmorpg.affix.strong_str_armor_suf": "Of the Monster",
+	"mmorpg.affix.summon_dmg_eye": "Unused",
+	"mmorpg.affix.thicket_bow": "Thicket Bow",
+	"mmorpg.affix.thicket_crossbow": "Thicket Crossbow",
+	"mmorpg.affix.thorn_rapier": "Thorn Rapier",
+	"mmorpg.affix.true_hit": "True Hit",
+	"mmorpg.affix.twilight_blade": "Twilight Blade",
+	"mmorpg.affix.vampiric": "Vampiric",
+	"mmorpg.affix.vdo_mask": "Voodoo Mask",
+	"mmorpg.affix.water_ele_dmg_jewelry": "Of Ice",
+	"mmorpg.affix.water_res": "Of the Storm",
+	"mmorpg.affix.water_spell_ele_dmg": "Chilled",
+	"mmorpg.affix.water_wep_dmg": "Chilled",
+	"mmorpg.affix.wep_item_both": "Miserable",
+	"mmorpg.affix.wep_item_flat": "Deadly",
+	"mmorpg.affix.wep_item_perc": "Cruel",
+	"mmorpg.affix.wildfire_staff": "Wildfire Staff",
+	"mmorpg.affix.wolf_pelt": "Wolf Pelt",
+
+"_comment": " [CATEGORY]: AFFIXES - NAMES",
 
 
 "_comment": " [CATEGORY]: SPELLS - NAMES",
@@ -1997,138 +2131,6 @@
 	"mmorpg.support_gem.water_pene": "Cold Penetration Support Gem",
 
 "_comment": " [CATEGORY]: SPELLS - NAMES",
-
-
-"_comment": " [CATEGORY]: AFFIXES - NAMES",
-
-	"mmorpg.affix.amber_amulet": "Amber Amulet",
-	"mmorpg.affix.arcane_staff": "Arcane Staff",
-	"mmorpg.affix.archeologists": "Archeologist's",
-	"mmorpg.affix.armor_eye": "Unused",
-	"mmorpg.affix.ass_bow": "Assassin Bow",
-	"mmorpg.affix.ass_crossbow": "Assassin Crossbow",
-	"mmorpg.affix.azure": "Azure",
-	"mmorpg.affix.bandit_mask": "Bandit Mask",
-	"mmorpg.affix.bone_bow": "Bone Bow",
-	"mmorpg.affix.bone_crossbow": "Bone Crossbow",
-	"mmorpg.affix.bone_helm": "Bone Circlet",
-	"mmorpg.affix.boundless": "Boundless",
-	"mmorpg.affix.chaos_damage_eye": "Unused",
-	"mmorpg.affix.chaos_ele_dmg_jewelry": "Of Venom",
-	"mmorpg.affix.chaos_res": "Of the Snake",
-	"mmorpg.affix.chaos_res_eye": "Unused",
-	"mmorpg.affix.chaos_wep_dmg": "Poisoned",
-	"mmorpg.affix.cleric_staff": "Cleric Staff",
-	"mmorpg.affix.cold_damage_eye": "Unused",
-	"mmorpg.affix.cold_res_eye": "Unused",
-	"mmorpg.affix.crit_prefix": "Critical",
-	"mmorpg.affix.cursed_staff": "Cursed Staff",
-	"mmorpg.affix.desolation": "Desolation",
-	"mmorpg.affix.dodge_eye": "Unused",
-	"mmorpg.affix.dusk_blade": "Dusk Blade",
-	"mmorpg.affix.ene_ring": "Emerald Ring",
-	"mmorpg.affix.energetic": "Energetic",
-	"mmorpg.affix.energy_reg": "Invirogating",
-	"mmorpg.affix.energy_reg_eye": "Unused",
-	"mmorpg.affix.fire_damage_eye": "Unused",
-	"mmorpg.affix.fire_ele_dmg_jewelry": "Of Embers",
-	"mmorpg.affix.fire_res": "Of the Drake",
-	"mmorpg.affix.fire_res_eye": "Unused",
-	"mmorpg.affix.fire_spell_ele_dmg": "Scorched",
-	"mmorpg.affix.fire_wep_dmg": "Scorched",
-	"mmorpg.affix.focused": "Focused",
-	"mmorpg.affix.glacial_staff": "Glacial Staff",
-	"mmorpg.affix.gladiator_helm": "Gladiator Helm",
-	"mmorpg.affix.glimmering": "Glimmering",
-	"mmorpg.affix.golden_crown": "Golden Crown",
-	"mmorpg.affix.heal_crit_dmg_prefix": "Inspiring",
-	"mmorpg.affix.heal_crit_prefix": "Truthful",
-	"mmorpg.affix.heal_suff": "Of Restoration",
-	"mmorpg.affix.health_reg_eye": "Unused",
-	"mmorpg.affix.hp_ring": "Coral Ring",
-	"mmorpg.affix.hunter_hood": "Hunter Hood",
-	"mmorpg.affix.immortal": "Immortal",
-	"mmorpg.affix.imperial_bow": "Imperial Bow",
-	"mmorpg.affix.imperial_crossbow": "Imperial Crossbow",
-	"mmorpg.affix.item_both_armor": "Reinforced",
-	"mmorpg.affix.item_both_dodge": "Scaled",
-	"mmorpg.affix.item_both_ms": "Fortified",
-	"mmorpg.affix.item_flat_armor": "Reinforced",
-	"mmorpg.affix.item_flat_dodge": "Scaled",
-	"mmorpg.affix.item_flat_ms": "Fortified",
-	"mmorpg.affix.item_perc_armor": "Reinforced",
-	"mmorpg.affix.item_perc_dodge": "Scaled",
-	"mmorpg.affix.item_perc_ms": "Fortified",
-	"mmorpg.affix.jade_amulet": "Jade Amulet",
-	"mmorpg.affix.lapis_amulet": "Lapis Amulet",
-	"mmorpg.affix.light_res_eye": "Unused",
-	"mmorpg.affix.lightning_damage_eye": "Unused",
-	"mmorpg.affix.lightning_res": "Of the Yeti",
-	"mmorpg.affix.lightning_spell_ele_dmg": "Poisoned",
-	"mmorpg.affix.lightning_staff": "Lightning Staff",
-	"mmorpg.affix.lunaris_circlet": "Lunaris Circlet",
-	"mmorpg.affix.magic_shield_eye": "Unused",
-	"mmorpg.affix.magic_shield_reg_eye": "Unused",
-	"mmorpg.affix.mana_reg": "Soothing",
-	"mmorpg.affix.mana_reg_eye": "Unused",
-	"mmorpg.affix.mana_ring": "Paua Ring",
-	"mmorpg.affix.mana_thief": "Mana Thief's",
-	"mmorpg.affix.mind_cage": "Mind Cage",
-	"mmorpg.affix.ms_reg": "Stabilizing",
-	"mmorpg.affix.ms_ring": "Moonstone Ring",
-	"mmorpg.affix.necro_helmet": "Necromancer Helm",
-	"mmorpg.affix.oakwood_staff": "Oak Wood Staff",
-	"mmorpg.affix.of_affluence": "Of Affluence",
-	"mmorpg.affix.of_azure_skies": "Of Azure Skies",
-	"mmorpg.affix.of_brutality": "Of Brutality",
-	"mmorpg.affix.of_consumption": "Of Consumption",
-	"mmorpg.affix.of_devastation": "Of Devastation",
-	"mmorpg.affix.of_energy": "Of Energy",
-	"mmorpg.affix.of_fast_cast": "Of Faster Casting",
-	"mmorpg.affix.of_gluttony": "Of Gluttony",
-	"mmorpg.affix.of_less_cd": "Of Repetition",
-	"mmorpg.affix.of_mana": "Of Mana",
-	"mmorpg.affix.of_pene": "Of Penetration",
-	"mmorpg.affix.of_spell_dmg": "Of Spell Damage",
-	"mmorpg.affix.of_spirit_markings": "Of Spirit Markings",
-	"mmorpg.affix.of_the_philosopher": "Of the Philosopher",
-	"mmorpg.affix.of_the_sky": "Of the Sky",
-	"mmorpg.affix.of_the_titan": "Of the Titan",
-	"mmorpg.affix.of_the_troll": "Of The Troll",
-	"mmorpg.affix.of_the_wind": "Of the Wind",
-	"mmorpg.affix.of_treasure": "Of Treasure",
-	"mmorpg.affix.of_vampirism": "Of Vampirism",
-	"mmorpg.affix.physical_damage_eye": "Unused",
-	"mmorpg.affix.physical_wep_dmg": "Tyrannical",
-	"mmorpg.affix.precise": "Precise",
-	"mmorpg.affix.promised": "Promised",
-	"mmorpg.affix.royal_helm": "Royal Helm",
-	"mmorpg.affix.rusted_sword": "Rusted Sword",
-	"mmorpg.affix.scavanger": "Scavanger",
-	"mmorpg.affix.seraphim": "Seraphim's",
-	"mmorpg.affix.siege_helm": "Siege Helmet",
-	"mmorpg.affix.strong_dex_armor_suf": "Of Skill",
-	"mmorpg.affix.strong_int_armor_suf": "Of the Genius",
-	"mmorpg.affix.strong_str_armor_suf": "Of the Monster",
-	"mmorpg.affix.summon_dmg_eye": "Unused",
-	"mmorpg.affix.thicket_bow": "Thicket Bow",
-	"mmorpg.affix.thicket_crossbow": "Thicket Crossbow",
-	"mmorpg.affix.thorn_rapier": "Thorn Rapier",
-	"mmorpg.affix.true_hit": "True Hit",
-	"mmorpg.affix.twilight_blade": "Twilight Blade",
-	"mmorpg.affix.vampiric": "Vampiric",
-	"mmorpg.affix.vdo_mask": "Voodoo Mask",
-	"mmorpg.affix.water_ele_dmg_jewelry": "Of Ice",
-	"mmorpg.affix.water_res": "Of the Storm",
-	"mmorpg.affix.water_spell_ele_dmg": "Chilled",
-	"mmorpg.affix.water_wep_dmg": "Chilled",
-	"mmorpg.affix.wep_item_both": "Miserable",
-	"mmorpg.affix.wep_item_flat": "Deadly",
-	"mmorpg.affix.wep_item_perc": "Cruel",
-	"mmorpg.affix.wildfire_staff": "Wildfire Staff",
-	"mmorpg.affix.wolf_pelt": "Wolf Pelt",
-
-"_comment": " [CATEGORY]: AFFIXES - NAMES",
 
 
 "_comment": " [CATEGORY]: TAGS - NAMES",
@@ -2340,6 +2342,8 @@
 	"mmorpg.word.current_prophecy_currency": "Current Prophecy Coins: %1$s",
 	"mmorpg.word.currently_selected": "Currently Selected",
 	"mmorpg.word.curse_offers": "Curse Offers:",
+	"mmorpg.word.damage_message": "[%1$s] dealt %2$s %3$s",
+	"mmorpg.word.damage_messages": "Provides a short message when you damage a mob.\n\nYou can hover over it for useful info like how was damage modified",
 	"mmorpg.word.decreased": "Decreased",
 	"mmorpg.word.deletesallaffixes": "Deletes all affixes",
 	"mmorpg.word.destroysitem": "DESTROYS the Item",
@@ -2429,12 +2433,14 @@
 	"mmorpg.word.shift_to_show_effect": "Shift to Show Status Effect info.",
 	"mmorpg.word.skillgem": "Skill Gem",
 	"mmorpg.word.soul": "Soul",
+	"mmorpg.word.source": "Source",
 	"mmorpg.word.spell_stats": "Spell Stats:",
 	"mmorpg.word.stats": "Stats",
 	"mmorpg.word.status_effect": "Status Effect",
 	"mmorpg.word.suppgem": "Support Gem",
 	"mmorpg.word.tags": "Tags: ",
 	"mmorpg.word.talents": "Talents",
+	"mmorpg.word.target": "Target",
 	"mmorpg.word.tier": "Tier",
 	"mmorpg.word.uber_frag": "Uber Fragment",
 	"mmorpg.word.unique_gear": "Unique Gear",
