--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -542,52 +542,52 @@
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
-	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
 	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
-	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
 	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"mmorpg.currency.chaos_orb": "Orb of Chaos",
 	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
-	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
 	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
-	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
+	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
 	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
-	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
 	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
 	"item.mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
 	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
-	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
 	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
 	"mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
@@ -1007,6 +1007,7 @@
 	"mmorpg.stat.dexterity": "Dexterity",
 	"mmorpg.stat.dmg_received": "Damage Received",
 	"mmorpg.stat.dmg_reduction": "Damage Reduction",
+	"mmorpg.stat.dmg_reduction_chance": "Damage Reduction Chance",
 	"mmorpg.stat.dmg_taken_to_mana": "Damage Taken to Mana",
 	"mmorpg.stat.dmg_to_living": "Damage To Living",
 	"mmorpg.stat.dmg_to_undead": "Damage To Undead",
@@ -2310,7 +2311,9 @@
 	"mmorpg.word.allowedon": "Allowed On: ",
 	"mmorpg.word.areacontains": "Area Contains an Uber Boss Portal",
 	"mmorpg.word.armor": "On Armor: ",
+	"mmorpg.word.arrow_draw_amount_multi": "Bow Draw Amount Multi",
 	"mmorpg.word.ascclasses": "Ascendancy",
+	"mmorpg.word.attack_speed_multi": "Atk Speed Multi",
 	"mmorpg.word.aura": "Augment",
 	"mmorpg.word.automatic_pve": "Auto PVE\n\nPlayers who enable this are considered Teamed up and Allies\n- Must be in Nearby (Radius set by config)",
 	"mmorpg.word.avg_lvl": "Average LVL: %1$s",
@@ -2424,6 +2427,7 @@
 	"mmorpg.word.prophecyplayeraffix": "Player Gains Debuff:",
 	"mmorpg.word.prophecyplayeraffixinfo": "Your rate of Prophecy Coins gain will increase.",
 	"mmorpg.word.prophecyplayeraffixtaken": "Currently Taken Debuff:",
+	"mmorpg.word.pvp_dmg_multi": "PVP Dmg Multi",
 	"mmorpg.word.requirements": "Requirements",
 	"mmorpg.word.rerollsaffix": "Rerolls an Affix",
 	"mmorpg.word.reward_offers": "Reward Offers:",
@@ -2452,6 +2456,7 @@
 	"mmorpg.word.usableon": "Usable On: ",
 	"mmorpg.word.very_hard": "Very Hard",
 	"mmorpg.word.weapon": "On Weapon: ",
+	"mmorpg.word.weapon_basic_attack_dmg_multi": "Weapon Basic Attack Dmg Multi",
 	"mmorpg.word.while_under_aura": "While Under Effect of %1$s:",
 	"mmorpg.word.wiki": "Library",
 	"mmorpg.word.x_items": "Reward Amount: %1$s",
@@ -2723,6 +2728,7 @@
 	"mmorpg.stat_desc.damage_spell_dmg": "Increases damage of spells with this tag. Totem Damage increases dmg of totems, etc.",
 	"mmorpg.stat_desc.dex_dmg": "Magic damage are spells that have tag Magic etc",
 	"mmorpg.stat_desc.dexterity": "Determines your total: Energy, Dodge Rating, Energy Regen",
+	"mmorpg.stat_desc.dmg_reduction_chance": "Chance to reduce damage by 50%. This stacks with other [Damage Reduction]s",
 	"mmorpg.stat_desc.dmg_taken_to_mana": "% of damage taken is restored to mana.",
 	"mmorpg.stat_desc.dmg_to_living": "Living entities are not undead ones.",
 	"mmorpg.stat_desc.dmg_when_low_hp": "Low hp is 30% or less.",
