--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -585,34 +585,34 @@
 
 "_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
-	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
 	"mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
+	"item.mmorpg.currency.affix_common_reroll": "Orb of New Beginnings",
 	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
 	"mmorpg.currency.chaos_orb": "Orb of Chaos",
 	"item.mmorpg.currency.chaos_orb": "Orb of Chaos",
-	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
 	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
+	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Upgrade",
 	"item.mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
 	"mmorpg.currency.entangled_potential": "Entangled Orb of Potential",
-	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
 	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
 	"mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
 	"item.mmorpg.currency.jewel_corrupt": "Orb of Mesmerizing Chaos",
-	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
+	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
 	"mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
+	"item.mmorpg.currency.map_rarity_upgrade": "Map Rarity Upgrade Orb",
 	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
 	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
 	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
 	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
 	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
 	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
 	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
@@ -621,18 +621,18 @@
 	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
 	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
 	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
 	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
 	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
 	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+	"mmorpg.currency.socket_adder": "Orb of Digging",
 	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
 	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
 
@@ -868,6 +868,13 @@
 	"mmorpg.talent.trap_cdr_big": "Major Trap Spell Cooldown Reduction",
 	"mmorpg.talent.trap_damage_big": "Major Trap Damage",
 	"mmorpg.talent.trickster_class": "Trickster",
+	"mmorpg.talent.trickster_class_0": "Total Frenzy",
+	"mmorpg.talent.trickster_class_1": "Resourceful Thief",
+	"mmorpg.talent.trickster_class_2": "Master of Phasing",
+	"mmorpg.talent.trickster_class_3": "Trickery",
+	"mmorpg.talent.trickster_class_4": "Guidance of Stone",
+	"mmorpg.talent.trickster_class_5": "Doomed Path",
+	"mmorpg.talent.trickster_class_6": "Futility of Defense",
 	"mmorpg.talent.trident_damage_big": "Major Trident Damage",
 	"mmorpg.talent.true_hit": "True Hit",
 	"mmorpg.talent.versatility": "Versatility",
@@ -956,6 +963,7 @@
 	"mmorpg.stat.blood_leech_cap": "Blood Leech Cap",
 	"mmorpg.stat.blood_on_is_blocked": "\u00A77Gain Blood on Block",
 	"mmorpg.stat.blood_on_is_dodged": "\u00A77Gain Blood on Dodge",
+	"mmorpg.stat.blood_on_kill": "Blood on Kill",
 	"mmorpg.stat.blood_per_10_strength": "\u00A7a[VAL1] \u00A74\u2764 Blood\u00A77 per 10 \u00A7b\u2605 Strength\u00A77",
 	"mmorpg.stat.blood_user": "\u00A77You now use \u00A74\u2764 Blood\u00A77 instead of \u00A79\u262F Mana\u00A77",
 	"mmorpg.stat.bonus_exp": "Bonus Experience",
@@ -1052,7 +1060,7 @@
 	"mmorpg.stat.dmg_when_target_near_full_hp": "Damage to near Full Health Targets",
 	"mmorpg.stat.dodge": "Dodge Rating",
 	"mmorpg.stat.dodge_aura_cost": "\u00A77Dodge Cost",
-	"mmorpg.stat.dodge_per_5_magic_shield": "\u00A7a[VAL1] \u00A72\u2748 Dodge Rating\u00A77 per 5 \u00A7d\u2764 Magic Shield\u00A77",
+	"mmorpg.stat.dodge_per_10_magic_shield": "\u00A7a[VAL1] \u00A72\u2748 Dodge Rating\u00A77 per 10 \u00A7d\u2764 Magic Shield\u00A77",
 	"mmorpg.stat.dot_dmg": "Damage Over Time",
 	"mmorpg.stat.dot_lifesteal": "Damage Over Time Lifesteal",
 	"mmorpg.stat.double_attack_chance": "Double Attack Damage Chance",
@@ -1093,6 +1101,7 @@
 	"mmorpg.stat.energy_on_hit_hit": "Energy on Hit",
 	"mmorpg.stat.energy_on_is_blocked": "\u00A77Gain Energy on Block",
 	"mmorpg.stat.energy_on_is_dodged": "\u00A77Gain Energy on Dodge",
+	"mmorpg.stat.energy_on_kill": "Energy on Kill",
 	"mmorpg.stat.energy_per_10_dexterity": "\u00A7a[VAL1] \u00A7a\u262F Energy\u00A77 per 10 \u00A7b\u2605 Dexterity\u00A77",
 	"mmorpg.stat.energy_per_10_mana": "\u00A7a[VAL1] \u00A7a\u262F Energy\u00A77 per 10 \u00A79\u262F Mana\u00A77",
 	"mmorpg.stat.energy_per_sec": "Energy Per Regen",
@@ -1346,6 +1355,7 @@
 	"mmorpg.stat.magic_shield_on_is_blocked": "\u00A77Gain Magic Shield on Block",
 	"mmorpg.stat.magic_shield_on_is_dodged": "\u00A77Gain Magic Shield on Dodge",
 	"mmorpg.stat.magic_shield_on_kill": "Magic Shield on Kill",
+	"mmorpg.stat.magic_shield_per_10_dodge": "\u00A7a[VAL1] \u00A7d\u2764 Magic Shield\u00A77 per 10 \u00A72\u2748 Dodge Rating\u00A77",
 	"mmorpg.stat.magic_shield_per_10_mana": "\u00A7a[VAL1] \u00A7d\u2764 Magic Shield\u00A77 per 10 \u00A79\u262F Mana\u00A77",
 	"mmorpg.stat.magic_shield_per_sec": "Magic Shield Per Regen",
 	"mmorpg.stat.magic_shield_reg_aura_cost": "\u00A77MS Regen Cost",
@@ -1628,46 +1638,6 @@
 "_comment": " [CATEGORY]: FORMATTER - NAMES",
 
 
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
-
-	"mmorpg.gear_type.bow": "Bow",
-	"mmorpg.gear_type.cloth_boots": "Cloth Boots",
-	"mmorpg.gear_type.cloth_chest": "Cloth Chest",
-	"mmorpg.gear_type.cloth_helmet": "Cloth Helmet",
-	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
-	"mmorpg.gear_type.crossbow": "Crossbow",
-	"mmorpg.gear_type.leather_boots": "Leather Boots",
-	"mmorpg.gear_type.leather_chest": "Leather Chest",
-	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
-	"mmorpg.gear_type.leather_pants": "Leather Pants",
-	"mmorpg.gear_type.necklace": "Necklace",
-	"mmorpg.gear_type.plate_boots": "Plate Boots",
-	"mmorpg.gear_type.plate_chest": "Plate Chest",
-	"mmorpg.gear_type.plate_helmet": "Plate Helmet",
-	"mmorpg.gear_type.plate_pants": "Plate Pants",
-	"mmorpg.gear_type.ring": "Ring",
-	"mmorpg.gear_type.shield": "Tower Shield",
-	"mmorpg.gear_type.staff": "Staff",
-	"mmorpg.gear_type.sword": "Sword",
-	"mmorpg.gear_type.tome": "Tome",
-	"mmorpg.gear_type.totem": "Totem",
-	"mmorpg.gearslot.boots": "Boots",
-	"mmorpg.gearslot.bow": "Bow",
-	"mmorpg.gearslot.chest": "Chest",
-	"mmorpg.gearslot.crossbow": "Crossbow",
-	"mmorpg.gearslot.helmet": "Helmet",
-	"mmorpg.gearslot.necklace": "Necklace",
-	"mmorpg.gearslot.pants": "Pants",
-	"mmorpg.gearslot.ring": "Ring",
-	"mmorpg.gearslot.shield": "Shield",
-	"mmorpg.gearslot.staff": "Staff",
-	"mmorpg.gearslot.sword": "Sword",
-	"mmorpg.gearslot.tome": "Tome",
-	"mmorpg.gearslot.totem": "Totem",
-
-"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
-
-
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
 
 	"mmorpg.unique_gear.air_disaster.name": "Aria of Disaster",
@@ -1722,6 +1692,46 @@
 	"mmorpg.unique_gear.witch_brew.name": "Witch's Brew",
 
 "_comment": " [CATEGORY]: UNIQUE ITEMS - NAMES",
+
+
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
+
+	"mmorpg.gear_type.bow": "Bow",
+	"mmorpg.gear_type.cloth_boots": "Cloth Boots",
+	"mmorpg.gear_type.cloth_chest": "Cloth Chest",
+	"mmorpg.gear_type.cloth_helmet": "Cloth Helmet",
+	"mmorpg.gear_type.cloth_pants": "Cloth Pants",
+	"mmorpg.gear_type.crossbow": "Crossbow",
+	"mmorpg.gear_type.leather_boots": "Leather Boots",
+	"mmorpg.gear_type.leather_chest": "Leather Chest",
+	"mmorpg.gear_type.leather_helmet": "Leather Helmet",
+	"mmorpg.gear_type.leather_pants": "Leather Pants",
+	"mmorpg.gear_type.necklace": "Necklace",
+	"mmorpg.gear_type.plate_boots": "Plate Boots",
+	"mmorpg.gear_type.plate_chest": "Plate Chest",
+	"mmorpg.gear_type.plate_helmet": "Plate Helmet",
+	"mmorpg.gear_type.plate_pants": "Plate Pants",
+	"mmorpg.gear_type.ring": "Ring",
+	"mmorpg.gear_type.shield": "Tower Shield",
+	"mmorpg.gear_type.staff": "Staff",
+	"mmorpg.gear_type.sword": "Sword",
+	"mmorpg.gear_type.tome": "Tome",
+	"mmorpg.gear_type.totem": "Totem",
+	"mmorpg.gearslot.boots": "Boots",
+	"mmorpg.gearslot.bow": "Bow",
+	"mmorpg.gearslot.chest": "Chest",
+	"mmorpg.gearslot.crossbow": "Crossbow",
+	"mmorpg.gearslot.helmet": "Helmet",
+	"mmorpg.gearslot.necklace": "Necklace",
+	"mmorpg.gearslot.pants": "Pants",
+	"mmorpg.gearslot.ring": "Ring",
+	"mmorpg.gearslot.shield": "Shield",
+	"mmorpg.gearslot.staff": "Staff",
+	"mmorpg.gearslot.sword": "Sword",
+	"mmorpg.gearslot.tome": "Tome",
+	"mmorpg.gearslot.totem": "Totem",
+
+"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
 
 
 "_comment": " [CATEGORY]: GEAR ITEMS - NAMES",
@@ -2480,6 +2490,7 @@
 	"mmorpg.word.skillgem": "Skill Gem",
 	"mmorpg.word.soul": "Soul",
 	"mmorpg.word.source": "Source",
+	"mmorpg.word.spell": "Spell",
 	"mmorpg.word.spell_stats": "Spell Stats:",
 	"mmorpg.word.stats": "Stats",
 	"mmorpg.word.status_effect": "Status Effect",
@@ -2624,6 +2635,7 @@
 	"mmorpg.stat_desc.block_chance": "Chance to passively block damage, requires a shield in the offhand, but don't have to activate it.",
 	"mmorpg.stat_desc.block_per_endurance_charge": "Adds stats depending on how many effect stacks you have currently.",
 	"mmorpg.stat_desc.blood": "Blood is a unique resource that works like mana.",
+	"mmorpg.stat_desc.blood_on_kill": "Leeches resource every time you kill an enemy. This is capped as all other leech",
 	"mmorpg.stat_desc.bonus_exp": "Increases xp gain",
 	"mmorpg.stat_desc.bonus_phys_to_ele": "Grants % of physical attack damage as extra elemental damage",
 	"mmorpg.stat_desc.bow_damage": "Increases damage done if it was caused by that weapon",
@@ -2719,6 +2731,7 @@
 	"mmorpg.stat_desc.enchanting_triple_drop": "Chance for profession to triple the drop, if it happens",
 	"mmorpg.stat_desc.energy": "Energy is used to attack with a weapon",
 	"mmorpg.stat_desc.energy_on_hit_hit": "Adds X amount of resource per hit to leech table and is capped by leech cap",
+	"mmorpg.stat_desc.energy_on_kill": "Leeches resource every time you kill an enemy. This is capped as all other leech",
 	"mmorpg.stat_desc.energy_per_sec": "Restore % of your total per regen tick.",
 	"mmorpg.stat_desc.energy_regen": "Restores this much every few seconds.",
 	"mmorpg.stat_desc.extra_mob_drops": "Mobs with this stat drop extra loot when slain.",
